fix z-index

--- a/la-couture-du-charme/client/src/CSS/Header.css
+++ b/la-couture-du-charme/client/src/CSS/Header.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: space-around;
     text-align: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header-logo{
